@@ -1,3 +1,13 @@
+2014-08-14  Zan Dobersek  <zdobersek@igalia.com>
+
+        ImageBufferDataCairo.h is missing header guards
+        https://bugs.webkit.org/show_bug.cgi?id=135933
+
+        Reviewed by Philippe Normand.
+
+        * platform/graphics/cairo/ImageBufferDataCairo.h:
+        Add the missing head guards to avoid problems when re-inclusion occurs.
+
 2014-08-13  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         Enable CSS_SCROLL_SNAP for iOS
